# obsidian.rs

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
obsidian-cli/: Cargo.toml
obsidian-cli/src/: args.rs  check.rs  error.rs  main.rs  note.rs  output.rs  search.rs  tags.rs  utils.rs
obsidian-cli/tests/: cli.rs
obsidian-core/: Cargo.toml
obsidian-core/.claude/: settings.local.json
obsidian-core/src/: common.rs  error.rs  health.rs  lib.rs  link.rs  note.rs  search.rs  tag.rs  vault.rs
obsidian-lsp/: Cargo.toml
obsidian-mcp/: Cargo.toml
obsidian-mcp/src/: error.rs  main.rs  server.rs  tools.rs
scripts/: release.sh
