[package]
name = "obsidian-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "obsidian"
path = "src/main.rs"

[dependencies]
obsidian-core = { path = "../obsidian-core" }
clap = { version = "4", features = ["derive", "env"] }
globset = "0.4"
color-eyre = "0.6"
colored = "3"
gray_matter = "0.3.2"
indexmap = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serde_json = "1"
tempfile = "3"
