[package]
name = "obsidian-rs-cli"
version = "0.1.1"
edition = "2024"
license = "Apache-2.0"
description = "A CLI for interacting with Obsidian vaults"

[[bin]]
name = "obsidian"
path = "src/main.rs"

[dependencies]
obsidian-rs-core = { path = "../obsidian-core", version = "0.1.1" }
clap = { version = "4", features = ["derive", "env"] }
globset = "0.4"
color-eyre = "0.6"
colored = "3"
gray_matter = "0.3.2"
indexmap = "2"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serde_json = "1"
tempfile = "3"
