[package]
name = "obsidian-rs-core"
version = "0.1.0"
edition = "2024"

[lib]
name = "obsidian_core"
path = "src/lib.rs"

[dependencies]
globset = "0.4"
thiserror = "2"
gray_matter = "0.3.2"
indexmap = "2"
rayon = "1"
regex = "1"
serde_yaml = "0.9"
serde_json = "1"
tempfile = "3"
ignore = "0.4"

[dev-dependencies]
