[package]
name = "obsidian-rs-core"
version = "0.1.1"
edition = "2024"
license = "Apache-2.0"
description = "A library for interacting with Obsidian vaults"
authors = ["epwalsh <epwalsh10@gmail.com>"]
repository = "https://github.com/epwalsh/obsidian.rs"
homepage = "https://github.com/epwalsh/obsidian.rs"
readme = "../README.md"

[lib]
name = "obsidian_core"
path = "src/lib.rs"

[dependencies]
globset = "0.4"
thiserror = "2"
gray_matter = "0.3.2"
indexmap = "2"
rayon = "1"
regex = "1"
serde_yaml = "0.9"
serde_json = "1"
tempfile = "3"
ignore = "0.4"

[dev-dependencies]
