[package]
name = "obsidian-rs-mcp"
version = "0.2.0"
edition = "2024"
license = "Apache-2.0"
description = "An MCP server for interacting with Obsidian vaults"
authors = ["epwalsh <epwalsh10@gmail.com>"]
repository = "https://github.com/epwalsh/obsidian.rs"
homepage = "https://github.com/epwalsh/obsidian.rs"
readme = "../README.md"

[[bin]]
name = "obsidian-mcp"
path = "src/main.rs"

[dependencies]
obsidian-rs-core = { path = "../obsidian-core", version = "0.2.0" }
clap = { version = "4", features = ["derive"] }
rmcp = { version = "1", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["full"] }
schemars = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
color-eyre = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
